# crypter

./: .gitignore  CMakeLists.txt  README.md  crypter_win
scripts/: compile_windows  complete_template_setup
src/: CMakeLists.txt  file_encrypter.cpp  file_encrypter.hpp  main.cpp  util.cpp  util.hpp
tests/: CMakeLists.txt  run_tests  test_example.cpp
